[package]
name = "ascii-march"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.10.0"
rand = "0.8.1"
futures = "0.3.11"
tokio = { version = "1.0.1", features = ["full"] }

[dependencies.pancurses]
version = "0.16"
features = ["disable_resize"]